<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#424242" />

        <EditText
            android:id="@+id/password"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="#424242"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="10dp"
            />

        <TextView
            android:id="@+id/move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#01579B"
            android:text="@string/move"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/masuk"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/masuk"
            android:textColor="#000000"
            android:textSize="18sp"
            android:maxWidth="120dp" />
    </LinearLayout>
</LinearLayout>